Added 1Hosts (lite). Fix #5

--- a/locales/en/filters.json
+++ b/locales/en/filters.json
@@ -90,5 +90,9 @@
 	{
 		"hostlist.9.name": "The Big List of Hacked Malware Web Sites",
 		"hostlist.9.description": "A list of web sites that are hacked with malware, ransomware or trojans."
+	},
+	{
+		"hostlist.24.name": "1Hosts (Lite)",
+		"hostlist.24.description": "Safeguard your device(s) against pesky ads, trackers, and malware."
 	}
 ]
