Added List-KR. Fix #11

--- a/locales/en/filters.json
+++ b/locales/en/filters.json
@@ -94,5 +94,9 @@
 	{
 		"hostlist.24.name": "1Hosts (Lite)",
 		"hostlist.24.description": "Safeguard your device(s) against pesky ads, trackers, and malware."
+	},
+	{
+		"hostlist.25.name": "KOR: List-KR DNS",
+		"hostlist.25.description": "A DNS version of List-KR, a filter for websites in Korean language."
 	}
 ]
