Added turk-adlist. Fix #23

--- a/locales/en/filters.json
+++ b/locales/en/filters.json
@@ -98,5 +98,9 @@
 	{
 		"hostlist.25.name": "KOR: List-KR DNS",
 		"hostlist.25.description": "A DNS version of List-KR, a filter for websites in Korean language."
+	},
+	{
+		"hostlist.26.name": "TUR: turk-adlist",
+		"hostlist.26.description": "Ad servers list to block ads and annoying elements on Turkish sites."
 	}
 ]
