--- a/locales/en/tags.json
+++ b/locales/en/tags.json
@@ -54,5 +54,9 @@
 	{
 		"hostlisttag.2.name": "Security",
 		"hostlisttag.2.description": "Lists designed specifically to block malicious, phishing, and scam domains."
+	},
+	{
+		"hostlisttag.110.name": "Turkish language-specific blocking",
+		"hostlisttag.110.description": "Designed specifically to block ads or other unwanted content in Turkish language."
 	}
 ]
