Added OISD full. Fix #8

--- a/locales/en/filters.json
+++ b/locales/en/filters.json
@@ -102,5 +102,9 @@
 	{
 		"hostlist.26.name": "TUR: turk-adlist",
 		"hostlist.26.description": "Ad servers list to block ads and annoying elements on Turkish sites."
+	},
+	{
+		"hostlist.27.name": "OISD Blocklist Full",
+		"hostlist.27.description": "Blocks ads/trackers and prioritizes functionality over blocking. Compared to the basic version, the chances of a false-positive are higher."
 	}
 ]
