Added Energized Spark. Fix #7

--- a/locales/en/filters.json
+++ b/locales/en/filters.json
@@ -106,5 +106,9 @@
 	{
 		"hostlist.27.name": "OISD Blocklist Full",
 		"hostlist.27.description": "Blocks ads/trackers and prioritizes functionality over blocking. Compared to the basic version, the chances of a false-positive are higher."
+	},
+	{
+		"hostlist.28.name": "Energized Spark",
+		"hostlist.28.description": "A list of domains that serve ads, tracking scripts and malware from multiple reputable sources."
 	}
 ]
