Added AdRules. Fix #13

--- a/locales/en/filters.json
+++ b/locales/en/filters.json
@@ -110,5 +110,9 @@
 	{
 		"hostlist.28.name": "Energized Spark",
 		"hostlist.28.description": "A list of domains that serve ads, tracking scripts and malware from multiple reputable sources."
+	},
+	{
+		"hostlist.29.name": "CHN: AdRules DNS List",
+		"hostlist.29.description": "This is a list of advertising filters based on the Chinese area, achieving a relatively accurate advertising shield."
 	}
 ]
